@@ -12,6 +12,15 @@
     <td>
       <dl>
 
+	<dt>May 9, 2004</dt>
+	<dd>
+	LilyPond 2.3.1 is out. This release has many new and cool
+	features. Check out the <a
+	href="../doc/v2.3/Documentation/topdocs/out-www/NEWS.html">release
+	notes</a> or head straight to the  
+	<a href="download/#2.3">download section</a>.
+	</dd>      
+
 	<dt>May 4, 2004</dt>
 	<dd>
 	  Help LilyPond get better, and join in on LilyPond
